--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -9,6 +9,8 @@
 <h:head></h:head> 
 <body> 
 	<ui:composition>
+		<f:param name="lastAudiencia" value="#{solicitud.audiencias.size()-1}"></f:param>
+		<f:param name="lastAgenda" value="#{solicitud.audiencias.get(lastAudiencia).agendas.size()-1}"></f:param>
 		
 		
 		<h:panelGroup layout="block" styleClass="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 100%" >	
@@ -58,24 +60,24 @@
 				<h:panelGroup layout="block" styleClass="box-body" style="border-top: 1px solid #f4f4f4;">
 					<div class="col-lg-6 col-sm-12 col-xs-12">
 			            <h:outputLabel value="Fecha Audiencia:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(0).agendas.get(0).fecha}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).fecha}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Hora:" />
-			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.MascaraHora(solicitud.audiencias.get(0).agendas.get(0).horaInicial)}" />
+			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.MascaraHora(solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaInicial)}" />
 		          	</div>
 		          	
 					<div class="col-lg-6 col-sm-12 col-xs-12">
 			            <h:outputLabel value="Audiencia Numero:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(0).audienciaNum}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).audienciaNum}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Duración:" />
-			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.Duracion(solicitud.audiencias.get(0).agendas.get(0).horaInicial,solicitud.audiencias.get(0).agendas.get(0).horaFinal)}" />
+			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.Duracion(solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaInicial,solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaFinal)}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Sala:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(0).agendas.get(0).sala.nombre}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).sala.nombre}" />
 		          	</div>			          	
 				</h:panelGroup>
 						        
