--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -10,10 +10,6 @@
 <body> 
 	
 	<ui:composition>
-		<f:param name="lastAudiencia" value="#{solicitud.audiencias.size()-1}"></f:param>
-		<f:param name="lastAgenda" value="#{solicitud.audiencias.get(lastAudiencia).agendas.size()-1}"></f:param>
-		
-		
 		<h:panelGrid layout="block" styleClass="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 100%;width:47%;margin-left:2%;margin-rigth:1%" >	
 			<f:ajax event="click" listener="#{modelSolicitud.addSelectSolicitud(solicitud.idSolicitud,solicitud.estado)}" render="#{formulario}" ></f:ajax>
 
@@ -62,24 +58,24 @@
 				<h:panelGroup layout="block" styleClass="box-body" style="border-top: 1px solid #f4f4f4;">
 					<div class="col-lg-6 col-sm-12 col-xs-12">
 			            <h:outputLabel value="Fecha Audiencia:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).fecha}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.get(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.size()-1).fecha}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Hora:" />
-			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.MascaraHora(solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaInicial)}" />
+			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.MascaraHora(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.get(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.size()-1).horaInicial)}" />
 		          	</div>
 		          	
 					<div class="col-lg-6 col-sm-12 col-xs-12">
 			            <h:outputLabel value="Audiencia Numero:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).audienciaNum}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(solicitud.audiencias.size()-1).audienciaNum}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Duración:" />
-			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.Duracion(solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaInicial,solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).horaFinal)}" />
+			            <h:outputText style="padding-left:5%" value="#{controllerSolicitud.Duracion(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.get(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.size()-1).horaInicial,solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.get(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.size()-1).horaFinal)}" />
 		          	</div>
 		          	<div class="col-lg-6 col-sm-10 col-xs-10">
 			            <h:outputLabel value="Sala:" />
-			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(lastAudiencia).agendas.get(lastAgenda).sala.nombre}" />
+			            <h:outputText style="padding-left:5%" value="#{solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.get(solicitud.audiencias.get(solicitud.audiencias.size()-1).agendas.size()-1).sala.nombre}" />
 		          	</div>			          	
 				</h:panelGroup>
 						        
