Guardar Resultado Parcial

--- a/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
@@ -148,7 +148,7 @@
 										
 										<div class="form-group has-error col-lg-10 box-body">
 											<label class="control-label" for="inputSuccess"><i class="fa fa-commenting-o"></i> Desacuerdos  </label>
-											<h:inputTextarea id="noacuerdos" value="#{modelAudiencia.noAcuerd}" styleClass="form-control" style="resize:none" rows="6"/>
+											<h:inputTextarea id="noacuerdos" value="#{modelAudiencia.noAcuerdo}" styleClass="form-control" style="resize:none" rows="6"/>
 										</div>
 										
 									</h:panelGroup>	
