--- a/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/desarrolloaudiencia.xhtml
@@ -13,7 +13,7 @@
   			<h:form id="desarrolloForm">
 				<div class='content-wrapper' style="height:10px;overflow:auto">
 					<div class="content">
-						#{controllerAudiencia.findSolicitud(modelSolicitud.selectSolicitud.get(0))}
+						#{controllerAudiencia.findSolicitud(modelAudiencia.selectSolicitud.get(0))}
 						<div class="row">
 							<div class="col-lg-12">
 				  				<h:panelGroup layout="block" class="box box-#{controllerSolicitud.colorSolicitudEstado(controllerAudiencia.solicitud.estado)} sombra">
