Segunda iteracion de detalleAudiencia tabla y ficha

--- a/src/main/webapp/modulos/audiencia/listaaudienciadetalletabla.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudienciadetalletabla.xhtml
@@ -38,7 +38,7 @@
 									<tr>
 										<td>
 											<h:panelGrid class="btn btn-xs btn-primary">
-												<i class="fa fa-check"></i>
+												<i class="fa fa-hand-pointer-o"></i>
 						            		</h:panelGrid>
 										</td>
 										<td class="text-center">
