--- a/src/main/webapp/modulos/solicitudes/modalasignarconciliador.xhtml
+++ b/src/main/webapp/modulos/solicitudes/modalasignarconciliador.xhtml
@@ -18,7 +18,7 @@
 						<div class="box-header text-center with-border">
 							<h3 class="box-title">Asignacion de Conciliador.</h3>
 						</div>
-						<h:form>
+						<h:form id="formModalAsignarConciliador">
 							<div class="box-body" style="background-color: aliceblue;">
 								<div class="row">
 									<div class="col-lg-12 text-center">
