Finalizado modulo de Reparto por Solicitud y Designacion

--- a/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
+++ b/src/main/webapp/modulos/audiencia/fichaaudiencia.xhtml
@@ -26,7 +26,7 @@
 						<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
               				<h:outputLabel value="Conciliador " /> 
               				<br/>
-							<h:outputText style="padding-left:10%" value="#{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.nombres} #{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.apellidos}" />							
+							<h:outputText style="padding-left:10%" value="#{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.apellidos} #{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.nombres} " />							
 							<br/>
 							<h:outputLabel value="Convocantes" />
 							<ul>
