--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -14,7 +14,7 @@
 			<div class='content-wrapper' style="height:10px;overflow:auto">
 				<div class="content">
 					<div class="row">
-					<ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliador()}">
+					<ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliadorReparto()}">
 						<div class="col-md-4 col-sm-6 col-xs-12">
 							<!-- El valor del height: 283px; se debe de quitar esta provicionalmente -->
 							<div class="box box-primary" style="box-shadow: 2px 2px 5px #999;height: 283px;">
