--- a/src/main/webapp/modulos/solicitudes/modalradicar.xhtml
+++ b/src/main/webapp/modulos/solicitudes/modalradicar.xhtml
@@ -31,8 +31,8 @@
 											</ul>
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-											<h:outputLabel rendered="#{controllerConciliador.buscarConciliador(solicitud.conciliador)!=''}" value="Conciliador:" />
-											<h:outputText value=" #{controllerConciliador.buscarConciliador(controllerSolicitud.liquidar().conciliador)}" />
+											<h:outputLabel value="Conciliador:" />
+											<h:outputText value="" />
 											<br/>
 											<h:outputLabel value="Convocados:" />
 											<ul>
