--- a/src/main/webapp/modulos/solicitudes/tablasolicitud.xhtml
+++ b/src/main/webapp/modulos/solicitudes/tablasolicitud.xhtml
@@ -49,7 +49,7 @@
 					</td>
 				
 					<td>
-						<h:outputText value="#{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.nombres} #{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.apellidos}"/>
+						<h:outputText value="#{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.apellidos} #{solicitud.designacions.get(solicitud.designacions.size()-1).conciliador.nombres} "/>
 					</td>
 				
 					<td>
