--- a/src/main/webapp/modulos/audiencia/listaaudienciadetalleficha.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudienciadetalleficha.xhtml
@@ -117,7 +117,7 @@
 			<div class="text-center">
 				<h:form id="formBotones">
 					<h:commandButton value="Tabla" action="listaaudienciadetalletabla?faces-redirect=true" styleClass="btn btn-sm btn-primary btn-menu"/>
-					<h:commandButton value="Desarrollo Audiencia" styleClass="btn btn-sm btn-primary btn-menu" actionListener="#{controllerSession.setIdSolicitudDesarrolloAudiencia(controllerAudienciaDetalle.solicitud.idSolicitud)}" action="desarrolloaudiencia?faces-redirect=true"  disabled="#{controllerAudienciaDetalle.bloquearBotonDesarrolloAudiencia()}" />
+					<h:commandButton value="Desarrollo Audiencia" styleClass="btn btn-sm btn-primary btn-menu" actionListener="#{controllerSession.setIdSolicitudDesarrolloAudiencia(controllerAudienciaDetalle.solicitud.idSolicitud)}" action="verdesarrolloaudiencia?faces-redirect=true"  disabled="#{controllerAudienciaDetalle.bloquearBotonDesarrolloAudiencia()}" />
 				</h:form>				
 			</div>
 		</div>
