--- a/src/main/webapp/modulos/audiencia/listaaudienciastabla.xhtml
+++ b/src/main/webapp/modulos/audiencia/listaaudienciastabla.xhtml
@@ -93,7 +93,7 @@
 
 					<h:commandButton value="Ficha" action="listaaudiencias?faces-redirect=true" styleClass="btn btn-sm btn-primary btn-menu"/>
 									
-					<h:commandButton value="Audiencia Detalle" action="listaaudienciadetalle?faces-redirect=true" rendered="#{modelAudiencia.selectSolicitud.size()==1}" styleClass="btn btn-sm btn-primary btn-menu"/>
+					<h:commandButton value="Audiencia Detalle" action="listaaudienciadetalle?faces-redirect=true" disabled="#{modelAudiencia.selectSolicitud.size()==1? 'false': 'true'}" styleClass="btn btn-sm btn-primary btn-menu"/>
 					
 					<h:commandButton styleClass="btn btn-sm btn-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-CITACION')} btn-menu" value="Enviar Citaciones" disabled="#{controllerSolicitud.bloquearBoton('AUDIENCIA-CITACION','')}" ></h:commandButton>
 					<h:commandButton value="Desarrollar Audiencia" actionListener="#{controllerSession.setIdSolicitudDesarrolloAudiencia(modelAudiencia.selectSolicitud.get(0))}" action="desarrolloaudiencia?faces-redirect=true"  disabled="#{controllerAudiencia.bloquearBoton('AUDIENCIA-ENCURSO','')}" styleClass="btn btn-sm btn-#{controllerSolicitud.colorSolicitudEstado('AUDIENCIA-ENCURSO')} btn-menu"/>
