Implementacion Sistemas de login - redirect

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,7 @@
 			
 			<div class='content-wrapper' style="height:10px;overflow:auto">
 			 	<div class="content">
-			 		
+			 		#{controllerLogin.redirect()}
 					<div class="col-md-3 col-sm-6 col-xs-12">
 						<div class="info-box bg-aqua">
 							<span class="info-box-icon"><i class="fa fa-bookmark-o"></i></span>
